testsuite/positive/Issue-0808.n
using System.Console;

public module M
{
  public foo(_ : int) : int { 1 }
  public foo(_ : string) : int { 2 }
}

def f(x) { M.foo(x) :> uint }
WriteLine(f("foo"))

/*
BEGIN-OUTPUT
2
END-OUTPUT
*/